@@ -1,3 +1,10 @@
+2001-09-29  Mike Kestner <mkestner@speakeasy.net>
+
+	* glib/Value.cs (int ctor): New constructor for int-based values.
+	(int exp cast): New explicit cast operator for Val to int conversion.
+	* gtk/Window.cs (DefaultHeight): New prop.
+	(DefaultWidth): New prop.
+
 2001-09-28  Mike Kestner <mkestner@speakeasy.net>
 
 	* glib/Object.cs (GetProperty): New, gets props from the raw obj.
